namespaces/cloud-platform-live-0.k8s.integration.dsd.io/laa-great-ideas-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-great-ideas-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA Digital"
    cloud-platform.justice.gov.uk/application: "LAA Great Ideas"
    cloud-platform.justice.gov.uk/owner: "David Elliott: david.elliott@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-great-ideas"
